--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/index.ts"></script>
+  <div id="page"></div>
+  <script type="module" src="/src/engine.ts"></script>
 </body>
 
 </html>
