--- a/graph.html
+++ b/graph.html
@@ -13,26 +13,28 @@
       margin: 0;
     }
 
-    html,
-    body,
-    #graph {
-      width: 100%;
-      height: 100%;
+    #wrapper {
+      margin-top: 100px;
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, 0);
     }
 
-    svg {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+    #state {
+      margin-top: 50px;
+      background-color: lightgray;
+      padding: 10px;
     }
   </style>
 
-  <title>Diventure Engine Graph</title>
+  <title>Diventure Engine Debug View</title>
 </head>
 
 <body>
-  <div id="graph"></div>
+  <div id="wrapper">
+    <div id="graph"></div>
+    <pre id="state"></pre>
+  </div>
   <script type="module" src="/src/graph.ts"></script>
 </body>
 
