--- a/debug.html
+++ b/debug.html
@@ -35,7 +35,7 @@
     <div id="graph"></div>
     <pre id="state"></pre>
   </div>
-  <script type="module" src="/src/graph.ts"></script>
+  <script type="module" src="/src/debug.ts"></script>
 </body>
 
 </html>
