improve debug styles

--- a/debug.html
+++ b/debug.html
@@ -14,10 +14,8 @@
     }
 
     #wrapper {
+      margin: 20px;
       margin-top: 100px;
-      position: absolute;
-      left: 50%;
-      transform: translate(-50%, 0);
     }
 
     #state {
