rename folders & move around code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="page"></div>
-  <script type="module" src="/src/engine.ts"></script>
+  <script type="module" src="/engine/main.ts"></script>
 </body>
 
 </html>
