--- a/debug.html
+++ b/debug.html
@@ -33,7 +33,7 @@
     <div id="graph"></div>
     <pre id="state"></pre>
   </div>
-  <script type="module" src="/src/debug.ts"></script>
+  <script type="module" src="/engine/debug.ts"></script>
 </body>
 
 </html>
