add item handling across places

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <div id="page"></div>
+  <div id="viewport">
+    <div id="page"></div>
+  </div>
   <script type="module" src="/engine/main.ts"></script>
 </body>
 
